--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -149,8 +149,8 @@
   }
   .about-page .text-zone {
     width: 80%;
-    position: relativ;
-    left: 200x;
+    position: relative;
+    left: 220x;
     right: 10px;
     top: 0;
     transform: none;
@@ -162,12 +162,13 @@
    
   }
 
-  p {
+  .about-page p {
 
   
     font-size: 10px;
     position: relative;
-    right: 10%;
+    right: 8%;
+    left: 10%;
     padding: 5px;
     
   }
@@ -219,8 +220,8 @@
   
   .stage-cube-cont {
     position: relative;
-    width: 80%;
-    height: 300px;
+    width: 100%;
+    height: 500px;
     padding-top: 0px;
     left: 0;
     top:120%;
@@ -231,7 +232,7 @@
   .about-page .text-zone {
     width: 80%;
     position: relativ;
-    left: 200x;
+    left: 230x;
     right: 10px;
     top: 0;
     transform: none;
@@ -248,7 +249,7 @@
   
     font-size: 10px;
     position: relative;
-    right: 10%;
+    right: 8%;
     padding: 5px;
     
   }
@@ -264,9 +265,9 @@
     margin-left: calc(50% - 60px);
 
     div {
-      width: 60px;
-      height: 30px;
-      font-size: 30px;
+      width: 200px;
+      height: 200px;
+      font-size: 100px;
       box-shadow: 0 0 15px 0px lightyellow;
     }
 
