--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -244,12 +244,12 @@
    
   }
 
-  p {
+ .about-page p {
 
   
     font-size: 10px;
     position: relative;
-    right: 8%;
+    right: 4%;
     padding: 5px;
     
   }
