--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -43,7 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 20px 0px lightyellow;
+    box-shadow: 0 0 30px 0px rgb(235, 235, 91);
   }
 
   .face1 {
