--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,9 @@ body{
   margin: 0;
   font: 300 11px/1.4 'Poppins' 'Helvetica Neue', sans-serif;
   /* color: #444; */
-  background-color: #022c43;
+  background-color: #0c0c0d;
   overflow: hidden;
   display: block;
   -webkit-font-smooting: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-@media screen and (max-width: 768px) { body { background-color: #022c43 !important; } }
-
-@media screen and (max-width: 480px) { body { background-color: #022c43 !important; } }
