--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -1,3 +1,69 @@
+.skills-content{
+    position: relative;
+    width: 100%;
+    margin-bottom: 30px;
+    
+    
+    
+}
+.mainS{
+
+   padding-bottom: 10px;
+   margin-bottom: 10px;
+   margin-top: 20px;
+   position: absolute;
+   top: 50%;
+   left: 10%;
+   width: 100%;
+
+}
+
+.icons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 10px 0;
+    width: 100%;
+    position: relative;
+    left: 0;
+    top: 0;
+    animation: fadeInAnimation ease 7s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    
+    p{
+        gap: 0px;
+        margin: 0px;
+        border: 2px solid yellow;
+        padding: 5px;
+        border-radius: 10px;
+        font-family: 'Poppins';
+        font-weight: 800;
+        background: linear-gradient(145deg, #1e293b, #1a2234);
+    
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    }
+    
+}
+
+.skill-text {
+ 
+    h2 {
+        color: rgb(250, 250, 176);
+        font-size: 17px;
+        font-family: "Inter";
+        font-weight: 800;
+        
+        
+    }
+}
+
+.icon {
+    font-size: 55px;
+    
+}
+
 .page {
     width: 100%;
     height: 100%;
@@ -39,8 +105,23 @@
     animation-delay: 1s;
 }
 
-.text-zone-projects{
+.text-zone-projects {
     display: flex;
+    flex-direction: column; /* Stack the elements vertically */
+    gap: 1.5rem; /* Add consistent spacing between elements */
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    transform: translateY(-50%);
+    width: 35%;
+    vertical-align: middle;
+    display: table-cell;
+    max-height: 90%;
+}
+
+.skills-page {
+    .text-zone {
+        display: flex;
         flex-direction: column; /* Stack the elements vertically */
         gap: 1.5rem; /* Add consistent spacing between elements */
         position: absolute;
@@ -51,6 +132,68 @@
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+    }
+
+    h1 {
+        font-size: 53px;
+        font-family: "Poppins";
+        color: yellow;
+        font-weight: 400;
+        margin-top: 0;
+        position: relative;
+        margin-bottom: 40px;
+        left: 10px;
+
+        &::before {
+            content: "<h1>";
+            font-family: "La Belle Aurore";
+            font-size: 18px;
+            position: absolute;
+            margin-top: -10px;
+            left: -10px;
+            opacity: 0.6;
+            line-height: 18px;
+            color: yellow;
+            padding: 10px;
+        }
+
+        &::after {
+            content: "</h1>";
+            font-family: "La Belle Aurore";
+            font-size: 18px;
+            line-height: 18px;
+            position: absolute;
+            left: -30px;
+            bottom: -20px;
+            opacity: 0.6;
+            margin-left: 20px;
+        }
+    }
+
+    p {
+        font: 20px;
+        color: rgb(211, 202, 40);
+        font-family: "INTER";
+        font-weight: 800;
+        min-width: fit-content;
+        animation: pulse 1s;
+
+        &:nth-of-type(1) {
+            animation-delay: 1.1s;
+        }
+        &:nth-of-type(2) {
+            animation-delay: 1.2;
+        }
+        &:nth-of-type(3) {
+            animation-delay: 1.3s;
+        }
+    }
+
+    .text-animate-hover {
+        &:hover {
+            color: white;
+        }
+    }
 }
 
 .about-page,
@@ -131,8 +274,6 @@
         }
     }
 }
-
-
 
 .devImg {
     z-index: 0;
@@ -219,7 +360,6 @@
 
 .cardActions button {
     font-size: 0rem;
-    
 }
 
 .cardContent h5 {
@@ -237,15 +377,20 @@
     margin: 0;
     padding-top: 2px;
 }
-.card .MuiButton-root{
-    background: linear-gradient(145deg, #1e293b, #1a2234); 
+.card .MuiButton-root {
+    background: linear-gradient(145deg, #1e293b, #1a2234);
     color: blue($color: #000000);
-     border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 15px; padding: 8px 18px; font-size: 1.1rem; font-family: "Poppins", sans-serif; transition: all 0.3s ease;
-       
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    padding: 8px 18px;
+    font-size: 1.1rem;
+    font-family: "Poppins", sans-serif;
+    transition: all 0.3s ease;
+
     bottom: 18px;
 
-    &:hover{
-        background: linear-gradient(145deg, yellow, yellow); 
+    &:hover {
+        background: linear-gradient(145deg, yellow, yellow);
     }
 }
 
@@ -256,11 +401,11 @@
         font-size: 15px;
     }
 
-    .project-page h1{
+    .project-page h1 {
         font-size: 40px;
         padding: 10px;
 
-        &::before{
+        &::before {
             top: -5px;
         }
     }
@@ -296,9 +441,7 @@
         animation-fill-mode: forwards;
     }
 
-    .card .MuiButton-root{
-
-       
+    .card .MuiButton-root {
         bottom: 5px;
     }
     .cardContent p {
@@ -310,10 +453,9 @@
         padding: 0;
         margin: 0;
     }
-    .card{
+    .card {
         padding: 5px;
         margin: 5px;
-        
     }
 
     .card-wrapper {
@@ -335,22 +477,19 @@
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-
-    .project-page h1{
+    .project-page h1 {
         font-size: 40px;
         padding: 10px;
 
-        &::before{
+        &::before {
             top: -5px;
         }
     }
-    
+
     .tags {
         left: 60px;
         font-size: 15px;
     }
-
-   
 
     .container {
         width: 100%;
@@ -368,8 +507,6 @@
         animation-delay: 1s;
     }
 
-   
-
     .devImg {
         z-index: 0;
         width: 130px;
@@ -385,9 +522,7 @@
         animation-fill-mode: forwards;
     }
 
-    .card .MuiButton-root{
-
-       
+    .card .MuiButton-root {
         bottom: 5px;
     }
     .cardContent p {
@@ -399,7 +534,7 @@
         padding: 0;
         margin: 0;
     }
-    .card{
+    .card {
         padding: 5px;
     }
 
@@ -421,12 +556,11 @@
     }
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-
-    .project-page h1{
+    .project-page h1 {
         font-size: 40px;
         padding: 10px;
 
-        &::before{
+        &::before {
             top: -5px;
         }
     }
