--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -106,6 +106,12 @@ nav {
         }
     }
 
+    a.skills-link{
+        &::after{
+            content: "SKILLS";
+        }
+    }
+
     a.project-link {
         &::after {
             content: "PROJECTS";
@@ -225,7 +231,7 @@ ul {
 /* Small Mobile Responsiveness (max-width: 480px) */
 @media screen and (max-width: 480px) {
 
-    
+
     
 
     ul li a {
