--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -108,7 +108,7 @@ nav {
 
     a.skills-link{
         &::after{
-            content: "SKILLS";
+            content: "LEARNINGS";
         }
     }
 
