--- a/src/components/Loader.scss
+++ b/src/components/Loader.scss
@@ -9,7 +9,7 @@
     height: 100vh;
     background-color: #000; /* Background color for loading screen */
     opacity: 1;
-    transition: opacity 1s ease-out; /* Smooth transition for fade-out */
+    transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
     z-index: 1000; /* Ensure loader is above other content */
 }
 
@@ -18,8 +18,63 @@
     height: auto;
 }
 
-/* Fade out the loader */
 .fade-out {
     opacity: 0; /* Fades out smoothly */
     pointer-events: none; /* Prevent interactions */
+}
+
+@media screen and (max-width: 480px){
+    .custom-loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000; /* Background color for loading screen */
+        opacity: 1;
+        transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
+        z-index: 1000; /* Ensure loader is above other content */
+    }
+    
+    .custom-loader img {
+        width: 700px; /* Adjust size */
+        height: auto;
+    }
+    
+    .fade-out {
+        opacity: 0; /* Fades out smoothly */
+        pointer-events: none; /* Prevent interactions */
+    }
+    
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px){
+    .custom-loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000; /* Background color for loading screen */
+        opacity: 1;
+        transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
+        z-index: 1000; /* Ensure loader is above other content */
+    }
+    
+    .custom-loader img {
+        width: 700px; /* Adjust size */
+        height: auto;
+    }
+    
+    .fade-out {
+        opacity: 0; /* Fades out smoothly */
+        pointer-events: none; /* Prevent interactions */
+    }
+    
 }
