--- a/src/components/Loader.scss
+++ b/src/components/Loader.scss
@@ -9,7 +9,7 @@
     height: 100vh;
     background-color: #000; /* Background color for loading screen */
     opacity: 1;
-    transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
+    transition: opacity 1.5s ease-in; /* Smooth transition for fade-out */
     z-index: 1000; /* Ensure loader is above other content */
 }
 
@@ -31,11 +31,12 @@
         position: fixed;
         top: 0;
         left: 0;
+        bottom: 15px;
         width: 100%;
         height: 100vh;
         background-color: #000; /* Background color for loading screen */
         opacity: 1;
-        transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
+        transition:  opacity 1.5s ease-in;  /* Smooth transition for fade-out */
         z-index: 1000; /* Ensure loader is above other content */
     }
     
@@ -59,11 +60,12 @@
         position: fixed;
         top: 0;
         left: 0;
+        bottom: 10px;
         width: 100%;
         height: 100vh;
         background-color: #000; /* Background color for loading screen */
         opacity: 1;
-        transition: opacity 0.5s ease-out; /* Smooth transition for fade-out */
+        transition:  opacity 1.5s ease-in;  /* Smooth transition for fade-out */
         z-index: 1000; /* Ensure loader is above other content */
     }
     
